chore(index.html): complete footer

--- a/index.html
+++ b/index.html
@@ -102,8 +102,43 @@
     <div>
         <h3>Language and Location</h3>
         <div>
-
+            <form action="/set-languge/">
+                <input type="hidden" name="Language" id="">
+                <select name="" id="">
+                    <option value="en">English</option>
+                    <option value="de">Deutsch</option>
+                    <option value="fr">Français</option>
+                    <option value="es">Español</option>
+                    <option value="ja">日本語</option>
+                    <option value="ch">简体中文</option>
+                </select>
+            </form>
         </div>
+        <div>
+            <form action="/set-country/">
+                <input type="hidden" name="Language" id="">
+                <select name="set-country">
+                    <option value="ar">Argentina</option>
+                    <option value="us">United States</option>
+                    <option value="uk">United Kingdom</option>
+                    <option value="fr">France</option>
+                    <option value="de">Germany</option>
+                    <option value="ca">Canada</option>
+                </select>
+            </form>
+        </div>
+    </div>
+    <div>
+        <a href="">Contanct Us</a>
+        <a href="">Press Resources</a>
+        <a href="">Lagal Info</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Cookie Settings</a>
+        <a href="">Imprint</a>
+    </div>
+    <div>
+        <img src="imgs/ableton-hallmark.ef5355379032.svg" alt="Ableton Logo">
+        <span>Made in Berlin</span>
     </div>
    </footer>
  </html>
