--- a/index.html
+++ b/index.html
@@ -59,6 +59,83 @@
           height="200px"
           style="display: block"
         />
+        <h3>
+          Making music isn’t easy. It takes time, effort, and learning. But when
+          you’re in the flow, it’s incredibly rewarding.
+        </h3>
+        <p>
+          We feel the same way about making Ableton products. The driving force
+          behind Ableton is our passion for what we make, and the people we make
+          it for.
+        </p>
+      </section>
+
+      <section>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/9SbnhgjeyXA"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; 
+        autoplay; 
+        clipboard-write; 
+        encrypted-media; 
+        gyroscope; 
+        picture-in-picture; 
+        web-share"
+          allowfullscreen
+        >
+        </iframe>
+        <p>Why Ableton - Juanpe Boliovar</p>
+        <h3>
+          We are more than 350 people from 30 different countries divided
+          between our headquarters in Berlin and our offices in Los Angeles and
+          Tokyo.
+        </h3>
+        <p>
+          Most of us are active musicians, producers, and DJs, and many of us
+          use Live and Push every day. We come from a wide range of cultural and
+          professional backgrounds. Some of us have PhDs, some are self-taught,
+          and most of us are somewhere in between. What connects us is the
+          shared belief that each of us has the skills and knowledge to
+          contribute to something big: helping to shape the future of music
+          culture.
+        </p>
+      </section>
+
+      <section>
+        <img
+          src="https://ableton-production.imgix.net/about/photo-3.jpg?fit=crop"
+          alt=""
+          height="200px"
+          style="display: block"
+        />
+        <img
+          src="https://ableton-production.imgix.net/about/photo-5.jpg?fit=crop"
+          alt=""
+          height="200px"
+          style="display: block"
+        />
+        <img
+          src="https://ableton-production.imgix.net/about/photo-4.jpg?fit=crop"
+          alt=""
+          height="200px"
+          style="display: block"
+        />
+
+        <h3>
+          We believe it takes focus to create truly outstanding instruments. We
+          only work on a few products and we strive to make them great.
+        </h3>
+        <p>
+          Rather than having a one-size-fits-all process, we try to give our
+          people what they need to work their magic and grow. We’ve learned that
+          achieving the best results comes from building teams that are richly
+          diverse, and thus able to explore problems from a wider set of
+          perspectives. We don’t always agree with each other, but opinion and
+          debate are valued and openly encouraged.
+        </p>
       </section>
     </main>
   </body>
