--- a/index.html
+++ b/index.html
@@ -137,6 +137,80 @@
           debate are valued and openly encouraged.
         </p>
       </section>
+
+      <section>
+        <img
+          src="https://ableton-production.imgix.net/about/poster-meet-the-makers.jpg?fit=crop&auto=format&fm=jpg"
+          alt=""
+          height="200px"
+        />
+        <h1>
+          We’re passionate about what we do, but we’re equally passionate about
+          improving who we are.
+        </h1>
+        <p>
+          We work hard to foster an environment where people can grow both
+          personally and professionally, and we strive to create a wealth of
+          opportunities to learn from and with each other.
+        </p>
+        <p>
+          Alongside an internal training program, employees are actively
+          supported in acquiring new knowledge and skills, and coached on
+          applying these in their daily work. In addition, staff-organized
+          development and music salons are a chance to discuss new technologies,
+          production techniques and best practices.
+        </p>
+      </section>
+
+      <section>
+        <img
+          src="https://ableton-production.imgix.net/about/photo-6-a.jpg?fit=crop"
+          alt=""
+          height="200px"
+        />
+        <img
+          src="https://ableton-production.imgix.net/about/photo-7.jpg?fit=crop"
+          alt=""
+          height="200px"
+        />
+
+        <h1>
+          We want our employees to love it here. Since we’re looking for
+          exceptional talent from around the world, we will do everything we can
+          to make your transition as easy as possible.
+        </h1>
+        <p>
+          If you're joining us in Berlin, we'll help with relocation and
+          paperwork. We’ll even provide you with free German or English lessons.
+          Plus, working in Germany means you can expect comprehensive health
+          insurance for you and your family, as well as generous maternity and
+          paternity leave. Office hours are flexible, but it’s not all work; we
+          have several company and team outings throughout the year as well as a
+          variety of fun, informal small-group activities.
+        </p>
+      </section>
+
+      <section>
+        <div>
+          <div>
+            <img
+              src="https://ableton-production.imgix.net/about/photo-8.jpg?fit=crop&crop=right"
+              alt=""
+              height="200px"
+            />
+          </div>
+          <div>
+            <h3>
+              We’re really proud of the work we’ve done so far. But there’s so
+              much more to come. If you’d like to be a part of it, please join
+              us.
+            </h3>
+            <h4>
+              <span>See latest jobs ></span>
+            </h4>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
