chore(index.html): add classes and divs

--- a/index.html
+++ b/index.html
@@ -136,16 +136,18 @@
           </p>
         </div>
       </section>
-      <section>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/9SbnhgjeyXA"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer;autoplay;clipboard-write;encrypted-media;gyroscope;picture-in-picture;web-share"
-          allowfullscreen
-        ></iframe>
+      <section >
+        <div class="iframe-container">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/9SbnhgjeyXA"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer;autoplay;clipboard-write;encrypted-media;gyroscope;picture-in-picture;web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
         <p>Why Ableton - Juanpe Boliovar</p>
         <div class="text" id="text3">
           <h3>
@@ -157,24 +159,16 @@
         </div>
       </section>
       <section>
-        <img
-          src="https://ableton-production.imgix.net/about/photo-3.jpg?fit=crop"
-          alt=""
-          height="200px"
-          style="display: block"
-        />
-        <img
-          src="https://ableton-production.imgix.net/about/photo-5.jpg?fit=crop"
-          alt=""
-          height="200px"
-          style="display: block"
-        />
-        <img
-          src="https://ableton-production.imgix.net/about/photo-4.jpg?fit=crop"
-          alt=""
-          height="200px"
-          style="display: block"
-        />
+            <div class="back-four">
+              <div class="backgrounds">
+                <img id="row-type" src="https://ableton-production.imgix.net/about/photo-3.jpg?fit=crop" alt="" height="200px" />
+                <img id="letter1" src="https://ableton-production.imgix.net/about/photo-4.jpg?fit=crop" alt="" height="200px" />
+              </div>
+              <div class="fourty">
+                <img src="https://ableton-production.imgix.net/about/photo-5.jpg?fit=crop" alt="" height="200px" />
+              </div>
+            </div>
+        
         <div class="text" id="text4">
           <h3>
             We believe it takes focus to create truly outstanding instruments. We
@@ -190,8 +184,8 @@
           </p>
         </div>
       </section>
-      <section>
-        <img
+      <section class="img-container">
+        <img class="sound"
           src="https://ableton-production.imgix.net/about/poster-meet-the-makers.jpg?fit=crop&auto=format&fm=jpg"
           alt=""
           height="200px"
@@ -216,16 +210,13 @@
         </div>
       </section>
       <section>
-        <img
-          src="https://ableton-production.imgix.net/about/photo-6-a.jpg?fit=crop"
-          alt=""
-          height="200px"
-        />
-        <img
-          src="https://ableton-production.imgix.net/about/photo-7.jpg?fit=crop"
-          alt=""
-          height="200px"
-        />
+        <div>
+          <img id="computer"
+            src="https://ableton-production.imgix.net/about/photo-6-a.jpg?fit=crop" alt="" height="200px"
+          />
+          <img src="https://ableton-production.imgix.net/about/photo-7.jpg?fit=crop" alt="" height="200px"
+          />
+        </div>
         <div class="text" id="text6">
           <h3>
             We want our employees to love it here. Since we’re looking for
